# vk-prototype

jipu/: proc_table.cpp  webgpu.cpp
jipu/native/: CMakeLists.txt  shader_module.h
jipu/native/vulkan/: vulkan_bind_group.cpp  vulkan_bind_group.h  vulkan_bind_group_layout.cpp  vulkan_bind_group_layout.h  vulkan_deleter.cpp  vulkan_deleter.h  vulkan_device.cpp  vulkan_device.h  vulkan_inflight_objects.cpp  vulkan_inflight_objects.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_pipeline_layout.cpp  vulkan_pipeline_layout.h  vulkan_shader_module.cpp  vulkan_shader_module.h  vulkan_submit_context.cpp  vulkan_submit_context.h
jipu/webgpu/: CMakeLists.txt  webgpu_command_encoder.cpp  webgpu_command_encoder.h  webgpu_compute_pass_encoder.cpp  webgpu_compute_pass_encoder.h  webgpu_compute_pipeline.cpp  webgpu_compute_pipeline.h  webgpu_device.cpp  webgpu_device.h  webgpu_shader_module.cpp
sample/android/apps/wgpu_particles/: build.gradle
sample/android/apps/wgpu_particles/src/main/: AndroidManifest.xml
sample/android/apps/wgpu_particles/src/main/java/com/gandis/jipu/: MainActivity.kt
sample/apps/: CMakeLists.txt
sample/apps/blend/: blend_sample.cpp
sample/apps/deferred/: main.cpp
sample/apps/imgui/: main.cpp
sample/apps/instancing/: main.cpp
sample/apps/obj_model/: main.cpp
sample/apps/offscreen/: offscreen_sample.cpp
sample/apps/particle/: main.cpp
sample/apps/query/: query_sample.cpp
sample/apps/triangle/: main.cpp
sample/apps/wgpu_particles/: CMakeLists.txt  main.cpp  wgpu_particles.cpp  wgpu_particles.h
sample/apps/wgpu_render_bundles/: wgpu_render_bundles.cpp  wgpu_render_bundles.h
sample/apps/wgpu_triangle/: wgpu_triangle.cpp  wgpu_triangle.h
sample/base/: native_imgui.cpp  webgpu_api.cpp  webgpu_api.h
test/: device_test.cpp
